--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
   <body>
     <h1>Don Rez</h1>
     <h2>Changed</h2>
+    <ul>
+      <li>Item1</li>
+      <li>Item2</li>
+      <li>Item3</li>
+      <li>Item4</li>
+    </ul>
   </body>
 </html>
